# SDL2-Game

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  README.md  Utilities.cmake
src/: CMakeLists.txt  main.cpp
src/Logger/: Logger.hpp
src/SDL/: EventHandler.hpp
